--- a/christmas/index.html
+++ b/christmas/index.html
@@ -250,7 +250,7 @@ body {
 </div>
 <div class="footer christmas">
  
- <p> Hao Chen @ <script>document.write(new Date().getFullYear())</script>
+ <p> 来自你的小朋友
 </div>
 
 </body>
