--- a/christmas/index.html
+++ b/christmas/index.html
@@ -241,11 +241,7 @@ body {
 
 <div class="poem">
  <p>宝贝圣诞快乐
- <p>老婆圣诞快乐
- <p>宝宝圣诞快乐 
- <p>夫人圣诞快乐
- <p>猪猪圣诞快乐
- <p>程佳颖圣诞快乐
+ <p>程佳颖
  <p>我喜欢你呀
 </div>
 <div class="footer christmas">
