--- a/christmas/index.html
+++ b/christmas/index.html
@@ -242,11 +242,11 @@ body {
 <div class="poem">
  <p>宝贝圣诞快乐
  <p>程佳颖
- <p>我喜欢你呀
+ <p>❤❤❤❤❤
 </div>
 <div class="footer christmas">
  
- <p> 来自你的小朋友
+ <p> 来自你的阿烽
 </div>
 
 </body>
